# pymarthe-am

./: .gitignore  environment.yml  pyproject.toml  setup.py
pymarthe/: marthe.py  mfield.py  moptim.py  mparam.py  msoil.py
pymarthe/helpers/: postprocessing.py
pymarthe/utils/: marthe_utils.py  pest_utils.py  pp_utils.py  xs_utils.py
