# --------- Pymarthe setup file ---------
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymarthe"
authors =[
    {"name" = "Ryma Aissat"},
    {"name" = "Alexandre Pryet"},
    {"name" = "Pierre Matran"}
]
dynamic = ["version"]

description = "Python library for PEST-MARTHE coupling"
readme = {file = "README.md", content-type = "text/markdown"}   

# license = {file = "LICENSE"}

classifiers = [
    "Programming Language :: Python :: 3",
    #"License :: ",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Hydrology",
]

keywords = ["hydrology", "groundwater", "modelling", "uncertainty", "coupling", "pest", "pestpp", "marthe"]

requires-python = ">=3.7"
dependencies = [
    "pandas >= 1.3",
    "numpy >= 1.18",
    "appdirs >= 1.4",
    "pathlib2 >= 2.3",
    "Rtree >= 0.9",
    "matplotlib >= 3.2",
    "pyshp >= 2.1",
    "pyemu >= 1.2",
    "flopy"
]

[project.optional-dependencies]
# install with `pip install pymarthe[extras]`
extras = [
    "pyvista >= 0.33",
    "vtk >= 9.1",
    "imageio >= 2.9"
]

[tool.setuptools.dynamic]
version = {attr = "pymarthe.__version__"}

[project.urls]
Repository = "https://github.com/pymartheproject/pymarthe"
#Documentation = 

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["examples*", "docs*", "assets*", "presentation*"]  # exclude packages matching these glob patterns (empty by default)

